# pub_gm_mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
data/adventures/: ashen_covenant.json  example_tavern.json
src/pub_gm_mcp/: __init__.py  server.py
src/pub_gm_mcp/campaign/: __init__.py  campaign_narrator.py  campaign_store.py
src/pub_gm_mcp/models/: __init__.py  adventure.py  campaign.py  campaign_session.py  session.py
src/pub_gm_mcp/narrator/: __init__.py  adventure_narrator.py
src/pub_gm_mcp/parser/: __init__.py  adventure_parser.py
src/pub_gm_mcp/resources/: parsing_adventure.md  parsing_guidelines.md  running_adventure.md  running_guidelines.md
tests/: conftest.py  test_campaign_narrator.py  test_models.py  test_narrator.py  test_persistence.py
