[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pub-gm-mcp"
version = "0.1.0"
description = "MCP server for running TTRPG sessions from published adventures"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
pub-gm-mcp = "pub_gm_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pub_gm_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
